# web_m13

./: README.md
web_13/: docker-compose.yml  main.py  pyproject.toml
web_13/postgres-data/: postmaster.pid
web_13/postgres-data/base/1/: pg_internal.init
web_13/postgres-data/base/16384/: pg_internal.init
web_13/postgres-data/base/5/: pg_internal.init
web_13/postgres-data/global/: pg_control  pg_internal.init
web_13/src/conf/: config.py
web_13/src/database/: db.py
web_13/src/repository/: users.py
web_13/src/routes/: auth.py  contacts.py  tokens.py
web_13/src/services/: auth.py  email.py
web_13_2(django)/hm10_myproject/: manage.py  pyproject.toml
web_13_2(django)/hm10_myproject/hm10_myproject/: asgi.py  settings.py  wsgi.py
web_13_2(django)/hm10_myproject/quotes/: models.py  views.py
web_13_2(django)/hm10_myproject/users/: urls.py  views.py
web_13_2(django)/hm10_myproject/utils/: migration.py
