[tool.poetry]
name = "hw10-django"
version = "0.1.0"
description = ""
authors = ["OlgaSirenko <132263673+CamillaSirenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pymongo = "*"
bson = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
